hsql/gen/HSQLParser.js
// Generated from HSQL.g4 by ANTLR 4.8
// jshint ignore: start
var antlr4 = require('antlr4/index');
var HSQLVisitor = require('./HSQLVisitor').HSQLVisitor;

var grammarFileName = "HSQL.g4";




var atn = new antlr4.atn.ATNDeserializer().deserialize(serializedATN);

var decisionsToDFA = atn.decisionToState.map( function(ds, index) { return new antlr4.dfa.DFA(ds, index); });

var sharedContextCache = new antlr4.PredictionContextCache();

var literalNames = [ null, "','", "'('", "')'", "'*'", "'.'", null, null, 
                     null, null, null, null, null, null, null, null, null, 
                     null, null, null, null, null, null, null, null, null, 
                     null, null, null, null, null, null, null, null, null, 
                     null, null, null, null, null, null, null, null, null, 
                     null, null, null, null, null, null, null, null, null, 
                     null, null, null, null, null, null, null, null, null, 
                     null, null, null, null, "'='", null, "'<'", "'<='", 
                     "'>'", "'>='" ];

var symbolicNames = [ null, null, null, null, null, null, "OUTER", "ONLY", 
                      "REAL_TYPE", "INTEGER_TYPE", "DECIMAL_TYPE", "VARSTRING_TYPE", 
                      "STRING_TYPE", "UNSTABLE", "STABLE", "TABLE", "EXPORT", 
                      "AND", "AS", "ASC", "AVG", "BETWEEN", "BY", "COUNT", 
                      "DESC", "DEPENDENT", "FALSE", "FROM", "GROUP", "IMPORT", 
                      "OPTION", "OPTIONS", "OVERWRITE", "UPDATE", "IN", 
                      "ON", "INDEPENDENT", "IDCOLUMN", "CREATE", "LAYOUT", 
                      "TRAIN", "FILE", "MAP", "METHOD", "NOT", "OR", "ORDER", 
                      "OUTPUT", "PLOT", "PREDICT", "PROJECT", "SELECT", 
                      "JOIN", "INNER", "LEFT", "RIGHT", "FULL", "SUM", "TITLE", 
                      "EXPIRE", "TRUE", "UESCAPE", "WHERE", "TYPE", "NCOMPILE", 
                      "SEMICOLON", "EQ", "NEQ", "LT", "LTE", "GT", "GTE", 
                      "STRING", "UNICODE_STRING", "BINARY_LITERAL", "INTEGER_VALUE", 
                      "DECIMAL_VALUE", "DOUBLE_VALUE", "IDENTIFIER", "SIMPLE_COMMENT", 
                      "SIMPLE_C_COMMENT", "BRACKETED_COMMENT", "WS" ];

var ruleNames =  [ "program", "stmt", "actionStmt", "exportStmt", "exportList", 
                   "exportableIdentifier", "assignStmt", "typeDefStmt", 
                   "typeDefExport", "mapExportable", "tableExport", "layoutExport", 
                   "identifierExport", "importStmt", "expr", "outputStmt", 
                   "outputVariant", "namedOutputStatement", "fileOutputStatement", 
                   "outputOptions", "outputUpdateOption", "outputExpireOption", 
                   "plotStmt", "plotType", "mlStmt", "train", "elementaryML", 
                   "trainOptions", "trainOption", "trainValue", "predict", 
                   "selectStmt", "joinClause", "joinType", "selectColumns", 
                   "exprLabel", "aggregatedSelectColumn", "selectColumn", 
                   "aggregateIdentifier", "selectFromClause", "nestedSelectStmt", 
                   "selectDataset", "selectDatasetFile", "selectTableName", 
                   "selectWhereClause", "orderByClause", "sortItem", "groupByClause", 
                   "layoutStmt", "layoutContent", "inlineStmt", "qualifiedIdentifier", 
                   "dataType", "expression", "booleanExpression", "predicate", 
                   "valueExpression", "primaryExpression", "number", "string", 
                   "booleanValue", "comparisonOperator" ];

function HSQLParser (input) {
	antlr4.Parser.call(this, input);
    this._interp = new antlr4.atn.ParserATNSimulator(this, atn, decisionsToDFA, sharedContextCache);
    this.ruleNames = ruleNames;
    this.literalNames = literalNames;
    this.symbolicNames = symbolicNames;

	  //these flags are set as required
	  this.flags = {ML:0,plot:0};

    return this;
}

HSQLParser.prototype = Object.create(antlr4.Parser.prototype);
HSQLParser.prototype.constructor = HSQLParser;

Object.defineProperty(HSQLParser.prototype, "atn", {
	get : function() {
		return atn;
	}
});

HSQLParser.EOF = antlr4.Token.EOF;
HSQLParser.T__0 = 1;
HSQLParser.T__1 = 2;
HSQLParser.T__2 = 3;
HSQLParser.T__3 = 4;
HSQLParser.T__4 = 5;
HSQLParser.OUTER = 6;
HSQLParser.ONLY = 7;
HSQLParser.REAL_TYPE = 8;
HSQLParser.INTEGER_TYPE = 9;
HSQLParser.DECIMAL_TYPE = 10;
HSQLParser.VARSTRING_TYPE = 11;
HSQLParser.STRING_TYPE = 12;
HSQLParser.UNSTABLE = 13;
HSQLParser.STABLE = 14;
HSQLParser.TABLE = 15;
HSQLParser.EXPORT = 16;
HSQLParser.AND = 17;
HSQLParser.AS = 18;
HSQLParser.ASC = 19;
HSQLParser.AVG = 20;
HSQLParser.BETWEEN = 21;
HSQLParser.BY = 22;
HSQLParser.COUNT = 23;
HSQLParser.DESC = 24;
HSQLParser.DEPENDENT = 25;
HSQLParser.FALSE = 26;
HSQLParser.FROM = 27;
HSQLParser.GROUP = 28;
HSQLParser.IMPORT = 29;
HSQLParser.OPTION = 30;
HSQLParser.OPTIONS = 31;
HSQLParser.OVERWRITE = 32;
HSQLParser.UPDATE = 33;
HSQLParser.IN = 34;
HSQLParser.ON = 35;
HSQLParser.INDEPENDENT = 36;
HSQLParser.IDCOLUMN = 37;
HSQLParser.CREATE = 38;
HSQLParser.LAYOUT = 39;
HSQLParser.TRAIN = 40;
HSQLParser.FILE = 41;
HSQLParser.MAP = 42;
HSQLParser.METHOD = 43;
HSQLParser.NOT = 44;
HSQLParser.OR = 45;
HSQLParser.ORDER = 46;
HSQLParser.OUTPUT = 47;
HSQLParser.PLOT = 48;
HSQLParser.PREDICT = 49;
HSQLParser.PROJECT = 50;
HSQLParser.SELECT = 51;
HSQLParser.JOIN = 52;
HSQLParser.INNER = 53;
HSQLParser.LEFT = 54;
HSQLParser.RIGHT = 55;
HSQLParser.FULL = 56;
HSQLParser.SUM = 57;
HSQLParser.TITLE = 58;
HSQLParser.EXPIRE = 59;
HSQLParser.TRUE = 60;
HSQLParser.UESCAPE = 61;
HSQLParser.WHERE = 62;
HSQLParser.TYPE = 63;
HSQLParser.NCOMPILE = 64;
HSQLParser.SEMICOLON = 65;
HSQLParser.EQ = 66;
HSQLParser.NEQ = 67;
HSQLParser.LT = 68;
HSQLParser.LTE = 69;
HSQLParser.GT = 70;
HSQLParser.GTE = 71;
HSQLParser.STRING = 72;
HSQLParser.UNICODE_STRING = 73;
HSQLParser.BINARY_LITERAL = 74;
HSQLParser.INTEGER_VALUE = 75;
HSQLParser.DECIMAL_VALUE = 76;
HSQLParser.DOUBLE_VALUE = 77;
HSQLParser.IDENTIFIER = 78;
HSQLParser.SIMPLE_COMMENT = 79;
HSQLParser.SIMPLE_C_COMMENT = 80;
HSQLParser.BRACKETED_COMMENT = 81;
HSQLParser.WS = 82;

HSQLParser.RULE_program = 0;
HSQLParser.RULE_stmt = 1;
HSQLParser.RULE_actionStmt = 2;
HSQLParser.RULE_exportStmt = 3;
HSQLParser.RULE_exportList = 4;
HSQLParser.RULE_exportableIdentifier = 5;
HSQLParser.RULE_assignStmt = 6;
HSQLParser.RULE_typeDefStmt = 7;
HSQLParser.RULE_typeDefExport = 8;
HSQLParser.RULE_mapExportable = 9;
HSQLParser.RULE_tableExport = 10;
HSQLParser.RULE_layoutExport = 11;
HSQLParser.RULE_identifierExport = 12;
HSQLParser.RULE_importStmt = 13;
HSQLParser.RULE_expr = 14;
HSQLParser.RULE_outputStmt = 15;
HSQLParser.RULE_outputVariant = 16;
HSQLParser.RULE_namedOutputStatement = 17;
HSQLParser.RULE_fileOutputStatement = 18;
HSQLParser.RULE_outputOptions = 19;
HSQLParser.RULE_outputUpdateOption = 20;
HSQLParser.RULE_outputExpireOption = 21;
HSQLParser.RULE_plotStmt = 22;
HSQLParser.RULE_plotType = 23;
HSQLParser.RULE_mlStmt = 24;
HSQLParser.RULE_train = 25;
HSQLParser.RULE_elementaryML = 26;
HSQLParser.RULE_trainOptions = 27;
HSQLParser.RULE_trainOption = 28;
HSQLParser.RULE_trainValue = 29;
HSQLParser.RULE_predict = 30;
HSQLParser.RULE_selectStmt = 31;
HSQLParser.RULE_joinClause = 32;
HSQLParser.RULE_joinType = 33;
HSQLParser.RULE_selectColumns = 34;
HSQLParser.RULE_exprLabel = 35;
HSQLParser.RULE_aggregatedSelectColumn = 36;
HSQLParser.RULE_selectColumn = 37;
HSQLParser.RULE_aggregateIdentifier = 38;
HSQLParser.RULE_selectFromClause = 39;
HSQLParser.RULE_nestedSelectStmt = 40;
HSQLParser.RULE_selectDataset = 41;
HSQLParser.RULE_selectDatasetFile = 42;
HSQLParser.RULE_selectTableName = 43;
HSQLParser.RULE_selectWhereClause = 44;
HSQLParser.RULE_orderByClause = 45;
HSQLParser.RULE_sortItem = 46;
HSQLParser.RULE_groupByClause = 47;
HSQLParser.RULE_layoutStmt = 48;
HSQLParser.RULE_layoutContent = 49;
HSQLParser.RULE_inlineStmt = 50;
HSQLParser.RULE_qualifiedIdentifier = 51;
HSQLParser.RULE_dataType = 52;
HSQLParser.RULE_expression = 53;
HSQLParser.RULE_booleanExpression = 54;
HSQLParser.RULE_predicate = 55;
HSQLParser.RULE_valueExpression = 56;
HSQLParser.RULE_primaryExpression = 57;
HSQLParser.RULE_number = 58;
HSQLParser.RULE_string = 59;
HSQLParser.RULE_booleanValue = 60;
HSQLParser.RULE_comparisonOperator = 61;


function ProgramContext(parser, parent, invokingState) {
	if(parent===undefined) {
	    parent = null;
	}
	if(invokingState===undefined || invokingState===null) {
		invokingState = -1;
	}
	antlr4.ParserRuleContext.call(this, parent, invokingState);
    this.parser = parser;
    this.ruleIndex = HSQLParser.RULE_program;
    return this;
}

ProgramContext.prototype = Object.create(antlr4.ParserRuleContext.prototype);
ProgramContext.prototype.constructor = ProgramContext;

ProgramContext.prototype.EOF = function() {
    return this.getToken(HSQLParser.EOF, 0);
};

ProgramContext.prototype.stmt = function(i) {
    if(i===undefined) {
        i = null;
    }
    if(i===null) {
        return this.getTypedRuleContexts(StmtContext);
    } else {
        return this.getTypedRuleContext(StmtContext,i);
    }
};

ProgramContext.prototype.exportStmt = function() {
    return this.getTypedRuleContext(ExportStmtContext,0);
};

ProgramContext.prototype.accept = function(visitor) {
    if ( visitor instanceof HSQLVisitor ) {
        return visitor.visitProgram(this);
    } else {
        return visitor.visitChildren(this);
    }
};




HSQLParser.ProgramContext = ProgramContext;

HSQLParser.prototype.program = function() {

    var localctx = new ProgramContext(this, this._ctx, this.state);
    this.enterRule(localctx, 0, HSQLParser.RULE_program);
    var _la = 0; // Token type
    try {
        this.enterOuterAlt(localctx, 1);
        this.state = 127;
        this._errHandler.sync(this);
        _la = this._input.LA(1);
        while(((((_la - 29)) & ~0x1f) == 0 && ((1 << (_la - 29)) & ((1 << (HSQLParser.IMPORT - 29)) | (1 << (HSQLParser.MAP - 29)) | (1 << (HSQLParser.OUTPUT - 29)) | (1 << (HSQLParser.PLOT - 29)))) !== 0) || _la===HSQLParser.NCOMPILE || _la===HSQLParser.IDENTIFIER) {
            this.state = 124;
            this.stmt();
            this.state = 129;
            this._errHandler.sync(this);
            _la = this._input.LA(1);
        }
        this.state = 131;
        this._errHandler.sync(this);
        _la = this._input.LA(1);
        if(_la===HSQLParser.EXPORT) {
            this.state = 130;
            this.exportStmt();
        }

        this.state = 133;
        this.match(HSQLParser.EOF);
    } catch (re) {
    	if(re instanceof antlr4.error.RecognitionException) {
	        localctx.exception = re;
	        this._errHandler.reportError(this, re);
	        this._errHandler.recover(this, re);
	    } else {
	    	throw re;
	    }
    } finally {
        this.exitRule();
    }
    return localctx;
};


function StmtContext(parser, parent, invokingState) {
	if(parent===undefined) {
	    parent = null;
	}
	if(invokingState===undefined || invokingState===null) {
		invokingState = -1;
	}
	antlr4.ParserRuleContext.call(this, parent, invokingState);
    this.parser = parser;
    this.ruleIndex = HSQLParser.RULE_stmt;
    return this;
}

StmtContext.prototype = Object.create(antlr4.ParserRuleContext.prototype);
StmtContext.prototype.constructor = StmtContext;

StmtContext.prototype.actionStmt = function() {
    return this.getTypedRuleContext(ActionStmtContext,0);
};

StmtContext.prototype.SEMICOLON = function() {
    return this.getToken(HSQLParser.SEMICOLON, 0);
};

StmtContext.prototype.assignStmt = function() {
    return this.getTypedRuleContext(AssignStmtContext,0);
};

StmtContext.prototype.importStmt = function() {
    return this.getTypedRuleContext(ImportStmtContext,0);
};

StmtContext.prototype.typeDefStmt = function() {
    return this.getTypedRuleContext(TypeDefStmtContext,0);
};

StmtContext.prototype.inlineStmt = function() {
    return this.getTypedRuleContext(InlineStmtContext,0);
};

StmtContext.prototype.accept = function(visitor) {
    if ( visitor instanceof HSQLVisitor ) {
        return visitor.visitStmt(this);
    } else {
        return visitor.visitChildren(this);
    }
};




HSQLParser.StmtContext = StmtContext;

HSQLParser.prototype.stmt = function() {

    var localctx = new StmtContext(this, this._ctx, this.state);
    this.enterRule(localctx, 2, HSQLParser.RULE_stmt);
    try {
        this.state = 150;
        this._errHandler.sync(this);
        switch(this._input.LA(1)) {
        case HSQLParser.OUTPUT:
        case HSQLParser.PLOT:
            this.enterOuterAlt(localctx, 1);
            this.state = 135;
            this.actionStmt();
            this.state = 136;
            this.match(HSQLParser.SEMICOLON);
            break;
        case HSQLParser.IDENTIFIER:
            this.enterOuterAlt(localctx, 2);
            this.state = 138;
            this.assignStmt();
            this.state = 139;
            this.match(HSQLParser.SEMICOLON);
            break;
        case HSQLParser.IMPORT:
            this.enterOuterAlt(localctx, 3);
            this.state = 141;
            this.importStmt();
            this.state = 142;
            this.match(HSQLParser.SEMICOLON);
            break;
        case HSQLParser.MAP:
            this.enterOuterAlt(localctx, 4);
            this.state = 144;
            this.typeDefStmt();
            this.state = 145;
            this.match(HSQLParser.SEMICOLON);
            break;
        case HSQLParser.NCOMPILE:
            this.enterOuterAlt(localctx, 5);
            this.state = 147;
            this.inlineStmt();
            this.state = 148;
            this.match(HSQLParser.SEMICOLON);
            break;
        default:
            throw new antlr4.error.NoViableAltException(this);
        }
    } catch (re) {
    	if(re instanceof antlr4.error.RecognitionException) {
	        localctx.exception = re;
	        this._errHandler.reportError(this, re);
	        this._errHandler.recover(this, re);
	    } else {
	    	throw re;
	    }
    } finally {
        this.exitRule();
    }
    return localctx;
};


function ActionStmtContext(parser, parent, invokingState) {
	if(parent===undefined) {
	    parent = null;
	}
	if(invokingState===undefined || invokingState===null) {
		invokingState = -1;
	}
	antlr4.ParserRuleContext.call(this, parent, invokingState);
    this.parser = parser;
    this.ruleIndex = HSQLParser.RULE_actionStmt;
    return this;
}

ActionStmtContext.prototype = Object.create(antlr4.ParserRuleContext.prototype);
ActionStmtContext.prototype.constructor = ActionStmtContext;

ActionStmtContext.prototype.outputStmt = function() {
    return this.getTypedRuleContext(OutputStmtContext,0);
};

ActionStmtContext.prototype.plotStmt = function() {
    return this.getTypedRuleContext(PlotStmtContext,0);
};

ActionStmtContext.prototype.accept = function(visitor) {
    if ( visitor instanceof HSQLVisitor ) {
        return visitor.visitActionStmt(this);
    } else {
        return visitor.visitChildren(this);
    }
};




HSQLParser.ActionStmtContext = ActionStmtContext;

HSQLParser.prototype.actionStmt = function() {

    var localctx = new ActionStmtContext(this, this._ctx, this.state);
    this.enterRule(localctx, 4, HSQLParser.RULE_actionStmt);
    try {
        this.state = 154;
        this._errHandler.sync(this);
        switch(this._input.LA(1)) {
        case HSQLParser.OUTPUT:
            this.enterOuterAlt(localctx, 1);
            this.state = 152;
            this.outputStmt();
            break;
        case HSQLParser.PLOT:
            this.enterOuterAlt(localctx, 2);
            this.state = 153;
            this.plotStmt();
            break;
        default:
            throw new antlr4.error.NoViableAltException(this);
        }
    } catch (re) {
    	if(re instanceof antlr4.error.RecognitionException) {
	        localctx.exception = re;
	        this._errHandler.reportError(this, re);
	        this._errHandler.recover(this, re);
	    } else {
	    	throw re;
	    }
    } finally {
        this.exitRule();
    }
    return localctx;
};


function ExportStmtContext(parser, parent, invokingState) {
	if(parent===undefined) {
	    parent = null;
	}
	if(invokingState===undefined || invokingState===null) {
		invokingState = -1;
	}
	antlr4.ParserRuleContext.call(this, parent, invokingState);
    this.parser = parser;
    this.ruleIndex = HSQLParser.RULE_exportStmt;
    return this;
}

ExportStmtContext.prototype = Object.create(antlr4.ParserRuleContext.prototype);
ExportStmtContext.prototype.constructor = ExportStmtContext;

ExportStmtContext.prototype.EXPORT = function() {
    return this.getToken(HSQLParser.EXPORT, 0);
};

ExportStmtContext.prototype.exportList = function() {
    return this.getTypedRuleContext(ExportListContext,0);
};

ExportStmtContext.prototype.SEMICOLON = function() {
    return this.getToken(HSQLParser.SEMICOLON, 0);
};

ExportStmtContext.prototype.accept = function(visitor) {
    if ( visitor instanceof HSQLVisitor ) {
        return visitor.visitExportStmt(this);
    } else {
        return visitor.visitChildren(this);
    }
};




HSQLParser.ExportStmtContext = ExportStmtContext;

HSQLParser.prototype.exportStmt = function() {

    var localctx = new ExportStmtContext(this, this._ctx, this.state);
    this.enterRule(localctx, 6, HSQLParser.RULE_exportStmt);
    try {
        this.enterOuterAlt(localctx, 1);
        this.state = 156;
        this.match(HSQLParser.EXPORT);
        this.state = 157;
        this.exportList();
        this.state = 158;
        this.match(HSQLParser.SEMICOLON);
    } catch (re) {
    	if(re instanceof antlr4.error.RecognitionException) {
	        localctx.exception = re;
	        this._errHandler.reportError(this, re);
	        this._errHandler.recover(this, re);
	    } else {
	    	throw re;
	    }
    } finally {
        this.exitRule();
    }
    return localctx;
};


function ExportListContext(parser, parent, invokingState) {
	if(parent===undefined) {
	    parent = null;
	}
	if(invokingState===undefined || invokingState===null) {
		invokingState = -1;
	}
	antlr4.ParserRuleContext.call(this, parent, invokingState);
    this.parser = parser;
    this.ruleIndex = HSQLParser.RULE_exportList;
    return this;
}

ExportListContext.prototype = Object.create(antlr4.ParserRuleContext.prototype);
ExportListContext.prototype.constructor = ExportListContext;

ExportListContext.prototype.exportableIdentifier = function(i) {
    if(i===undefined) {
        i = null;
    }
    if(i===null) {
        return this.getTypedRuleContexts(ExportableIdentifierContext);
    } else {
        return this.getTypedRuleContext(ExportableIdentifierContext,i);
    }
};

ExportListContext.prototype.accept = function(visitor) {
    if ( visitor instanceof HSQLVisitor ) {
        return visitor.visitExportList(this);
    } else {
        return visitor.visitChildren(this);
    }
};




HSQLParser.ExportListContext = ExportListContext;

HSQLParser.prototype.exportList = function() {

    var localctx = new ExportListContext(this, this._ctx, this.state);
    this.enterRule(localctx, 8, HSQLParser.RULE_exportList);
    var _la = 0; // Token type
    try {
        this.enterOuterAlt(localctx, 1);
        this.state = 160;
        this.exportableIdentifier();
        this.state = 165;
        this._errHandler.sync(this);
        _la = this._input.LA(1);
        while(_la===HSQLParser.T__0) {
            this.state = 161;
            this.match(HSQLParser.T__0);
            this.state = 162;
            this.exportableIdentifier();
            this.state = 167;
            this._errHandler.sync(this);
            _la = this._input.LA(1);
        }
    } catch (re) {
    	if(re instanceof antlr4.error.RecognitionException) {
	        localctx.exception = re;
	        this._errHandler.reportError(this, re);
	        this._errHandler.recover(this, re);
	    } else {
	    	throw re;
	    }
    } finally {
        this.exitRule();
    }
    return localctx;
};


function ExportableIdentifierContext(parser, parent, invokingState) {
	if(parent===undefined) {
	    parent = null;
	}
	if(invokingState===undefined || invokingState===null) {
		invokingState = -1;
	}
	antlr4.ParserRuleContext.call(this, parent, invokingState);
    this.parser = parser;
    this.ruleIndex = HSQLParser.RULE_exportableIdentifier;
    return this;
}

ExportableIdentifierContext.prototype = Object.create(antlr4.ParserRuleContext.prototype);
ExportableIdentifierContext.prototype.constructor = ExportableIdentifierContext;

ExportableIdentifierContext.prototype.IDENTIFIER = function() {
    return this.getToken(HSQLParser.IDENTIFIER, 0);
};

ExportableIdentifierContext.prototype.accept = function(visitor) {
    if ( visitor instanceof HSQLVisitor ) {
        return visitor.visitExportableIdentifier(this);
    } else {
        return visitor.visitChildren(this);
    }
};




HSQLParser.ExportableIdentifierContext = ExportableIdentifierContext;

HSQLParser.prototype.exportableIdentifier = function() {
